# stockquotes

./: .gitignore  README.md  stockquotes.cabal
src/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
