cabal-version:  >= 1.29
name:           stockquotes
version:        0.0.1
synopsis:       Stockquotes processes historical stock quotes data.
build-type:     Simple

executable stockquotes
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: QuoteData Charts StatReport Params HtmlReport
  build-depends:
    base
    , text >=1.2 && <1.3
    , bytestring >=0.10 && <0.11
    , time >=1.8 && <1.11
    , fmt >=0.5 && <0.7
    , colonnade >=1.1 && <1.3
    , blaze-html >=0.9 && <0.10
    , blaze-colonnade >=1.1 && <1.3
    , Chart >=1.8 && <1.10
    , Chart-diagrams >=1.8 && <1.10
    , cassava >=0.5 && <0.6
    , optparse-applicative >=0.14 && <0.16
  default-language: Haskell2010